--- a/html/recipes/under-construction.html
+++ b/html/recipes/under-construction.html
@@ -2,25 +2,25 @@
 <html lang="de">
 	<head>
 		<title>Stephan's Rezepte</title>
-		<link rel="icon" href="../../images/company-logo.svg" />
+		<link rel="icon" href="/images/company-logo.svg" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="../../css/reset.css" />
-		<link rel="stylesheet" href="../../css/index.css" />
-		<link rel="stylesheet" href="../../css/recipe-view.css" />
-		<script src="../../js/index.js" defer></script>
-		<script src="../../js/search-recipes-list.js" defer></script>
-		<script src="../../js/adjust-amount.js" defer></script>
+		<link rel="stylesheet" href="/css/reset.css" />
+		<link rel="stylesheet" href="/css/index.css" />
+		<link rel="stylesheet" href="/css/recipe-view.css" />
+		<script src="/js/index.js" defer></script>
+		<script src="/js/search-recipes-list.js" defer></script>
+		<script src="/js/adjust-amount.js" defer></script>
 	</head>
 
 	<body>
 		<header>
 			<div class="header-container">
-				<a class="logo-wrapper" href="../../index.html">
+				<a class="logo-wrapper" href="/index.html">
 					<div class="logo">
 						<img
 							class="logo__img"
-							src="../../images/company-logo.svg"
+							src="/images/company-logo.svg"
 							width="100"
 							height="100"
 							alt="Firmenlogo"
@@ -29,39 +29,33 @@
 					</div>
 				</a>
 				<div class="search">
-					<img
-						class="search__img"
-						src="../../images/magnifying-glass.svg"
-						width="50"
-						height="50"
-						alt="Lupe"
-					/>
+					<img class="search__img" src="/images/magnifying-glass.svg" width="50" height="50" alt="Lupe" />
 					<input class="search__input" type="search" placeholder="Rezeptname oder Zutat eingeben..." />
 				</div>
 				<nav>
 					<ul class="nav-menu">
-						<li><a class="nav-menu__link" href="../recipes.html">Rezepte</a></li>
-						<li><a class="nav-menu__link" href="../contact.html">Kontakt</a></li>
+						<li><a class="nav-menu__link" href="/html/recipes.html">Rezepte</a></li>
+						<li><a class="nav-menu__link" href="/html/contact.html">Kontakt</a></li>
 					</ul>
 				</nav>
 				<div class="burger-menu">
 					<img
 						class="burger-menu__open-img"
-						src="../../images/burger-menu-open.svg"
+						src="/images/burger-menu-open.svg"
 						width="50"
 						height="50"
 						alt="Burgermenü"
 					/>
 					<img
 						class="burger-menu__close-img"
-						src="../../images/burger-menu-close.svg"
+						src="/images/burger-menu-close.svg"
 						width="50"
 						height="50"
 						alt="Burgermenu schließen"
 					/>
 				</div>
+				<ul class="recipe-search-list"></ul>
 			</div>
-			<ul class="recipe-search-list"></ul>
 		</header>
 
 		<main>
@@ -70,7 +64,7 @@
 				<div class="recipe__wrapper">
 					<img
 						class="recipe__img"
-						src="../../images/recipes/pizza.jpg"
+						src="/images/recipes/pizza.jpg"
 						width="612"
 						height="408"
 						alt="Pizza Salami"
@@ -118,7 +112,7 @@
 					<div class="recipe__cooking-time">
 						<img
 							class="cooking-time__img"
-							src="../../images/recipes/clock.svg"
+							src="/images/recipes/clock.svg"
 							width="50"
 							height="50"
 							alt="Uhr"
@@ -126,7 +120,7 @@
 						<span class="cooking-time__preparation">Zubereitung: 30 Min</span>
 						<img
 							class="cooking-time__img"
-							src="../../images/recipes/clock.svg"
+							src="/images/recipes/clock.svg"
 							width="50"
 							height="50"
 							alt="Uhr"
